fixed nav overflow issue

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,5 @@
 
-html, body {
+body {
   margin: 0;
   font-family: 'Orbitron', sans-serif;
   overflow-x: hidden;
